# rename_project

./: .gitignore  Makefile  README.md  prd.md  pyproject.toml  rename.sh  rename_dry.sh
src/rename_project/: __init__.py  cli.py  renamer.py  typed_click.py
tests/: __init__.py  conftest.py  test_cli.py  test_renamer.py
